# codebound-api

./: Dockerfile  Gemfile  docker-compose.yml  pyproject.toml  pyrightconfig.json  tasks.py
app/: main.py
app/api/routes/: auth.py
app/controllers/: auth_controller.rb  me_controller.rb
app/controllers/concerns/: authentication.rb
app/core/: config.py  cors.py
app/services/: github_oauth_service.py
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
config/initializers/: cors.rb  omniauth.rb
